hide horizantal overflow in all webiste make category work in both platforms better style add space from right for title of quizContainer fix position of quizContainer from center to right fix quiz width and position in mobiles

--- a/frontend/static/css/base/_globals.scss
+++ b/frontend/static/css/base/_globals.scss
@@ -11,6 +11,7 @@ html {
     font-size: 100%;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 *, *::before, *::after {
