--- a/frontend/static/css/templates/_quizzes.scss
+++ b/frontend/static/css/templates/_quizzes.scss
@@ -85,7 +85,7 @@ body {
     }
 
     &__container {
-        max-width: 30rem;
+        max-width: 21rem;
         margin: auto 1.25rem; margin-top: 5rem;
         padding: 0.1rem;
         border-radius: 24px;
@@ -109,6 +109,7 @@ body {
         border-radius: 23px 25px 0 0;
         background: #00000065;
         backdrop-filter: blur(165px);
+        width: 21rem;
 
         @include breakpoints-up(medium) {
             background: none;
@@ -259,7 +260,7 @@ body {
             margin-bottom: 3rem;
         }
         
-        width: 27.4rem;
+        width: 23rem;
         overflow: hidden;
         bottom: 3.5rem;
         z-index: 1;
@@ -314,7 +315,7 @@ body {
         }
 
         &__textLabel {
-            width: 21rem;
+            width: 19rem;
             border: 2px solid #adadad;
             padding: 0.6rem;
 
